--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Picture-Patch-Studios</title>
 </head>
+
 <body>
-    
+    <h1>PICTURE PATCH STUDIOS</h1>
+
+    <p>“The best thing about a picture is that it never changes, even when the people in it do.”
+        — Andy Warhol</p>
 </body>
+
 </html>
