--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <h1>PICTURE PATCH STUDIOS</h1>
+    <div class="landing">
+        <h1>PICTURE PATCH STUDIOS</h1>
+    
 
-    <p>“The best thing about a picture is that it never changes, even when the people in it do.”
-        — Andy Warhol</p>
+    <!-- <p>“The best thing about a picture is that it never changes, even when the people in it do.”
+        — Andy Warhol</p> -->
+    </div>
+
 </body>
 
 </html>
