add the about us section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Picture-Patch-Studios</title>
 </head>
@@ -11,12 +14,41 @@
 <body>
     <div class="landing">
         <h1>PICTURE PATCH STUDIOS</h1>
-    
-
-    <!-- <p>“The best thing about a picture is that it never changes, even when the people in it do.”
-        — Andy Warhol</p> -->
+        <p>“The best thing about a picture is that it never changes, even when the people in it do.”
+            — <strong>Andy Warhol</strong></p>
     </div>
 
+    <div class="about">
+        <h1>About Us</h1>
+        <p>For <strong>Picture Patch Studios</strong>, photography is an art of observation. It’s about finding
+            something interesting in an ordinary place… We have found it has little to do with the things you see and everything to do
+            with the way you see them.We take variety of photograph types,incluiding event shoots, personal 
+                shoots ,business shoots where organisations would want to advertise their products 
+                and services.</p>
+                <p>We believe this is the place you have been looking for,to get very classic and unique pictures 
+                    at a very friendly price.
+                </p>
+    </div>
+
+    <div class="services">
+       <h1>Services</h1>
+       <h4>Here are some of the type of photo shoots we offer</h4>
+
+       <div class="row">
+         <div class="col-mod-3">
+            <img src="images/modelling.jpg" alt="">
+         </div>
+         <div class="col-mod-3">
+            <img src="images/magazine .jpg" alt="">
+         </div>
+         <div class="col-mod-3">
+            <img src="images/home-shoots.jpg" alt="">
+         </div>
+         <div class="col-mod-3">
+            <img src="images/studio.jpeg" alt="">
+         </div>
+       </div>
+    </div>
 </body>
 
 </html>
