add the services section

--- a/index.html
+++ b/index.html
@@ -34,18 +34,64 @@
 
        <div class="row">
          <div class="col-mod-3">
-            <img src="images/modelling.jpg" alt="">
+            <img src="images/magazine.jpg" alt="">
+            <figcaption>
+                <h2><span>MAGAZINE SHOOTS</span></h2>
+              </figcaption><a href="#"></a>
+            </figure>
          </div>
          <div class="col-mod-3">
-            <img src="images/magazine .jpg" alt="">
+            <img src="images/ceremony.jpg" alt="">
+            <figcaption>
+                <h2><span>CEREMONIES</span></h2>
+              </figcaption><a href="#"></a>
+            </figure>
          </div>
          <div class="col-mod-3">
             <img src="images/home-shoots.jpg" alt="">
+            <figcaption>
+                <h2><span>ADVERTS</span></h2>
+              </figcaption><a href="#"></a>
+            </figure>
          </div>
          <div class="col-mod-3">
             <img src="images/studio.jpeg" alt="">
+            <figcaption>
+                <h2>STUDIO  <span>SHOOTS</span></h2>
+              </figcaption><a href="#"></a>
+            </figure>
          </div>
        </div>
+       <div class="row">
+        <div class="col-mod-3">
+           <img src="images/baby.jpg" alt="">
+           <figcaption>
+            <h2>BABY  <span>SHOWERS</span></h2>
+          </figcaption><a href="#"></a>
+        </figure>
+        </div>
+        <div class="col-mod-3">
+           <img src="images/street.jpg" alt="">
+           <figcaption>
+            <h2>STREET  <span>SHOOTS</span></h2>
+          </figcaption><a href="#"></a>
+        </figure>
+        </div>
+        <div class="col-mod-3">
+           <img src="images/family.jpeg" alt="">
+           <figcaption>
+            <h2>FAMILY  <span>SHOOTS</span></h2>
+          </figcaption><a href="#"></a>
+        </figure>
+        </div>
+        <div class="col-mod-3">
+           <img src="images/fest.png" alt="">
+           <figcaption>
+            <h2>CONCERTS/  <span>FESTIVALS</span></h2>
+          </figcaption><a href="#"></a>
+        </figure>
+        </div>
+      </div>
     </div>
 </body>
 
