--- a/index.html
+++ b/index.html
@@ -19,79 +19,72 @@
     <div class="about">
         <h1>About Us</h1>
         <p>For <strong>Picture Patch Studios</strong>, photography is an art of observation. It’s about finding
-            something interesting in an ordinary place… We have found it has little to do with the things you see and everything to do
-            with the way you see them.We take variety of photograph types,incluiding event shoots, personal 
-                shoots ,business shoots where organisations would want to advertise their products 
-                and services.</p>
-                <p>We believe this is the place you have been looking for,to get very classic and unique pictures 
-                    at a very friendly price.
-                </p>
+            something interesting in an ordinary place… We have found it has little to do with the things you see and
+            everything to do
+            with the way you see them.We take variety of photograph types,incluiding event shoots, personal
+            shoots ,business shoots where organisations would want to advertise their products
+            and services.</p>
+        <p>We believe this is the place you have been looking for,to get very classic and unique pictures
+            at a very friendly price.
+        </p>
     </div>
 
     <div class="services">
-       <h1>Services</h1>
-       <h4>Here are some of the type of photo shoots we offer</h4>
+        <h1>Services</h1>
+        <h4>Here are some of the type of photo shoots we offer</h4>
 
-       <div class="row">
-         <div class="col-mod-3">
-            <img src="images/magazine.jpg" alt="">
-            <figcaption>
-                <h2><span>MAGAZINE SHOOTS</span></h2>
-              </figcaption><a href="#"></a>
-            </figure>
-         </div>
-         <div class="col-mod-3">
-            <img src="images/ceremony.jpg" alt="">
-            <figcaption>
-                <h2><span>CEREMONIES</span></h2>
-              </figcaption><a href="#"></a>
-            </figure>
-         </div>
-         <div class="col-mod-3">
-            <img src="images/home-shoots.jpg" alt="">
-            <figcaption>
-                <h2><span>ADVERTS</span></h2>
-              </figcaption><a href="#"></a>
-            </figure>
-         </div>
-         <div class="col-mod-3">
-            <img src="images/studio.jpeg" alt="">
-            <figcaption>
-                <h2>STUDIO  <span>SHOOTS</span></h2>
-              </figcaption><a href="#"></a>
-            </figure>
-         </div>
-       </div>
-       <div class="row">
-        <div class="col-mod-3">
-           <img src="images/baby.jpg" alt="">
-           <figcaption>
-            <h2>BABY  <span>SHOWERS</span></h2>
-          </figcaption><a href="#"></a>
-        </figure>
+        <div class="row">
+            <div class="col-mod-3">
+                <img src="images/magazine.jpg" alt="">
+                <figcaption>
+                    <h2><span>MAGAZINE SHOOTS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/ceremony.jpg" alt="">
+                <figcaption>
+                    <h2><span>CEREMONIES</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/home-shoots.jpg" alt="">
+                <figcaption>
+                    <h2><span>ADVERTS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/studio.jpeg" alt="">
+                <figcaption>
+                    <h2>STUDIO <span>SHOOTS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
         </div>
-        <div class="col-mod-3">
-           <img src="images/street.jpg" alt="">
-           <figcaption>
-            <h2>STREET  <span>SHOOTS</span></h2>
-          </figcaption><a href="#"></a>
-        </figure>
+        <div class="row">
+            <div class="col-mod-3">
+                <img src="images/baby.jpg" alt="">
+                <figcaption>
+                    <h2>BABY <span>SHOWERS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/street.jpg" alt="">
+                <figcaption>
+                    <h2>STREET <span>SHOOTS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/family.jpeg" alt="">
+                <figcaption>
+                    <h2>FAMILY <span>SHOOTS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
+            <div class="col-mod-3">
+                <img src="images/fest.png" alt="">
+                <figcaption>
+                    <h2>CONCERTS/ <span>FESTIVALS</span></h2>
+                </figcaption><a href="#"></a>
+            </div>
         </div>
-        <div class="col-mod-3">
-           <img src="images/family.jpeg" alt="">
-           <figcaption>
-            <h2>FAMILY  <span>SHOOTS</span></h2>
-          </figcaption><a href="#"></a>
-        </figure>
-        </div>
-        <div class="col-mod-3">
-           <img src="images/fest.png" alt="">
-           <figcaption>
-            <h2>CONCERTS/  <span>FESTIVALS</span></h2>
-          </figcaption><a href="#"></a>
-        </figure>
-        </div>
-      </div>
     </div>
 </body>
 
