--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="css/scripts.css"></script>
     <title>Picture-Patch-Studios</title>
 </head>
 
@@ -85,6 +86,33 @@
                 </figcaption><a href="#"></a>
             </div>
         </div>
+    </div>
+
+    <div class="contacts">
+        <div class="container-fluid">
+            <h1>Contact Us</h1>
+            <p>If you would like to book us for shoots you can email us also you can reach us to us
+                through our social media handouts
+            </p>
+            <form action="">
+                <div id="name">
+                    <input type="text" id="name" name="user_name" placeholder="Name">
+                </div>
+
+                <div id="email">
+                    <input type="email" id="mail" name="user_email" placeholder="Email">
+                </div>
+
+                <div id="message">
+                    <textarea id="msg" name="user_message" placeholder="Your Message"></textarea>
+                </div>
+
+                <div class="button">
+                    <button type="submit">Send your message</button>
+                </div>
+            </form>
+        </div>
+
     </div>
 </body>
 
