styled the form

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </p>
             <form action="">
                 <div id="name">
-                    <input type="text" id="name" name="user_name" placeholder="Name">
+                    <input type="text" id="name" name="user_name" placeholder="Name"><br><br><br>
                 </div>
 
                 <div id="email">
@@ -104,11 +104,11 @@
                 </div>
 
                 <div id="message">
-                    <textarea id="msg" name="user_message" placeholder="Your Message"></textarea>
+                    <textarea name="" id="textarea" placeholder="Your message here"></textarea><br>
                 </div>
 
                 <div class="button">
-                    <button type="submit">Send your message</button>
+                    <button id="submit" type="submit">Send your message</button>
                 </div>
             </form>
         </div>
