--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="css/scripts.css"></script>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Picture-Patch-Studios</title>
 </head>
 
@@ -94,25 +95,9 @@
             <p>If you would like to book us for shoots you can email us also you can reach us to us
                 through our social media handouts
             </p>
-            <form action="">
-                <div id="name">
-                    <input type="text" id="name" name="user_name" placeholder="Name"><br><br><br>
-                </div>
 
-                <div id="email">
-                    <input type="email" id="mail" name="user_email" placeholder="Email">
-                </div>
 
-                <div id="message">
-                    <textarea name="" id="textarea" placeholder="Your message here"></textarea><br>
-                </div>
-
-                <div class="button">
-                    <button id="submit" type="submit">Send your message</button>
-                </div>
-            </form>
         </div>
-
     </div>
 </body>
 
