--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="css/scripts.css"></script>
     <title>Picture-Patch-Studios</title>
 </head>
 
@@ -95,34 +94,26 @@
             <p>If you would like to book us for shoots you can email us also you can reach us to us
                 through our social media handouts
             </p>
+            <form action="">
+                <div id="name">
+                    <input type="text" id="name" name="user_name" placeholder="Name"><br><br><br><br>
+                </div>
 
-            <!-- /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ -->
-        </style>
-        <div id="mc_embed_signup">
-          <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group">
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email...">
-            </div>
-            <div class="col-12">
-              <textarea cols="80" rows="7" placeholder="Your message here..."></textarea>
-            </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                name="b_6d18b56debeb406091197c510_656858e10d" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Submit" name="submit" id="mc-embedded-subscribe"
-                class="button"></div>
-          </div>
+                <div id="email">
+                    <input type="email" id="mail" name="user_email" placeholder="Email">
+                </div>
+
+                <div id="message">
+                    <textarea name="" id="textarea" placeholder="Your message here"></textarea><br>
+                </div>
+
+                <div class="button">
+                    <button id="submit" type="submit">Send your message</button>
+                </div>
+                
+            </form>
         </div>
-        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-        <script
-          type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-        <!--End mc_embed_signup-->
-        </div>
+
     </div>
 </body>
 
