styled the body

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="css/scripts.css"></script>
@@ -94,23 +95,25 @@
             <p>If you would like to book us for shoots you can email us also you can reach us to us
                 through our social media handouts
             </p>
-            <form action="">
+            <form action="https://127.us17.list-manage.com/subscribe/post?u=79036af4bb40c45d02e78a3f3&amp;id=d29865bbe2"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank" novalidate>
                 <div id="name">
-                    <input type="text" id="name" name="user_name" placeholder="Name"><br><br><br><br>
+                    <input type="text" name="LNAME" class="" id="mce-LNAME" placeholder="Name"><br><br><br><br>
                 </div>
 
                 <div id="email">
-                    <input type="email" id="mail" name="user_email" placeholder="Email">
+                    <input type="email"  id="mce-EMAIL" name="user_email" placeholder="Email">
                 </div>
 
                 <div id="message">
-                    <textarea name="" id="textarea" placeholder="Your message here"></textarea><br>
+                    <textarea name="" name="MESSAGE" class="" id="mce-MESSAGE"  placeholder="Your message here"></textarea><br>
                 </div>
 
                 <div class="button">
-                    <button id="submit" type="submit">Send your message</button>
+                    <button id="submit" type="submit">Submit</button>
                 </div>
-                
+
             </form>
         </div>
 
