--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
                 </div>
 
                 <div id="email">
-                    <input type="email"  id="mce-EMAIL" name="user_email" placeholder="Email">
+                    <input type="email" id="mce-EMAIL" name="user_email" placeholder="Email">
                 </div>
 
                 <div id="message">
-                    <textarea name="" name="MESSAGE" class="" id="mce-MESSAGE"  placeholder="Your message here"></textarea><br>
+                    <textarea name="" name="MESSAGE" class="" id="mce-MESSAGE"
+                        placeholder="Your message here"></textarea><br>
                 </div>
 
                 <div class="button">
@@ -117,7 +118,27 @@
             </form>
         </div>
 
-    </div>
+        </div>
+        <div id="social">
+            <div class="row">
+                <img src="images/" alt="" id="social1">
+                <img src="images/dribble.png" alt="" id="social2">
+                <img src="images/facebook.png" alt="">
+                <img src="images/g_plus.png" alt="">
+                <img src="images/skype.png" alt="">
+                <img src="images/stumble_upon.png" alt="">
+                <img src="images/behance.png" alt="">
+                <img src="images/pinterest.png" alt="">
+                <img src="images/flickr.png" alt="" id="social9">
+
+            </div>
+            <footer class="footer">
+                <h5>DELANI STUDIO</h5>
+                <p>2019</p>
+            </footer>
+
+        </div>
+
 </body>
 
 </html>
