--- a/index.html
+++ b/index.html
@@ -119,25 +119,16 @@
         </div>
 
         </div>
-        <div id="social">
-            <div class="row">
-                <img src="images/" alt="" id="social1">
-                <img src="images/dribble.png" alt="" id="social2">
-                <img src="images/facebook.png" alt="">
-                <img src="images/g_plus.png" alt="">
-                <img src="images/skype.png" alt="">
-                <img src="images/stumble_upon.png" alt="">
-                <img src="images/behance.png" alt="">
-                <img src="images/pinterest.png" alt="">
-                <img src="images/flickr.png" alt="" id="social9">
-
-            </div>
+       <div class="social">
+          <img src="images/facebook.png" alt="" id="social1">
+          <img src="images/insta.jpeg" alt="">
+          <img src="images/skype.jpeg" alt="">
+          <img src="images/gmail.png" alt="" id="social2">
+       </div>
             <footer class="footer">
                 <h5>DELANI STUDIO</h5>
                 <p>2019</p>
             </footer>
-
-        </div>
 
 </body>
 
