added the footer

--- a/index.html
+++ b/index.html
@@ -118,17 +118,21 @@
             </form>
         </div>
 
+    </div>
+    <div class="icons">
+        <div class="social">
+            <img src="images/facebook.png" alt="" id="social1">
+            <img src="images/insta.jpeg" alt="" id="social3">
+            <img src="images/skype.jpeg" alt="">
+            <img src="images/gmail.png" alt="" id="social2">
+            <img src="images/behance.png" alt="">
         </div>
-       <div class="social">
-          <img src="images/facebook.png" alt="" id="social1">
-          <img src="images/insta.jpeg" alt="">
-          <img src="images/skype.jpeg" alt="">
-          <img src="images/gmail.png" alt="" id="social2">
-       </div>
-            <footer class="footer">
-                <h5>DELANI STUDIO</h5>
-                <p>2019</p>
-            </footer>
+        <footer class="footer">
+            <h5>PICTURE PATCH STUDIOS</h5>
+            <p>2019</p>
+        </footer>
+    </div>
+
 
 </body>
 
