add final comits

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
     <script src="css/scripts.css"></script>
     <title>Picture-Patch-Studios</title>
 </head>
@@ -103,7 +104,7 @@
                 </div>
 
                 <div id="email">
-                    <input type="email" id="mce-EMAIL" name="user_email" placeholder="Email">
+                    <input type="text" id="mce-EMAIL" name="user_email" placeholder="Email">
                 </div>
 
                 <div id="message">
