--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="icons">
         <div class="social">
             <img src="images/facebook.png" alt="" id="social1">
-            <img src="images/insta.jpeg" alt="" id="social3">
+            <img src="images/insta.jpeg"  id="social3">
             <img src="images/skype.jpeg" alt="">
             <img src="images/gmail.png" alt="" id="social2">
             <img src="images/behance.png" alt="">
